--- a/setayesh/css/ctyle.css
+++ b/setayesh/css/ctyle.css
@@ -75,13 +75,14 @@ footer{
     color: #fff;
     justify-content: center;
     align-items: center;
+    margin-bottom: 30px;
 }
 #button1 {
     box-shadow: 0 15px 25px rgb(0, 0, 0, .1);
     border-radius: 10px;
     margin-top: 15px;
     border: none;
-    padding: 15px 109px;
+    padding: 15px 115px;
     background: #57b846;
     font-family: 'Vazir';
     font-size: 19px;
