--- a/setayesh/message_all/css/ctyle.css
+++ b/setayesh/message_all/css/ctyle.css
@@ -4,7 +4,20 @@
 }
 
 body {
-    background: -webkit-linear-gradient(right, #0072ff, #00c6ff);
+    /* background: -webkit-linear-gradient(right, #9900ffb9, rgba(210, 65, 247, 0.973)); */
+    /* background: url("../img/OIP.jpg"); */
+    /* تعیین حالت عدم تکرار تصویر */
+    background-repeat: no-repeat;
+    /* تعیین موقعیت مرکزی تصویر */
+    background-position: center center;
+    /* تعیین حالت ثابت بودن تصویر نسبت به صفحه */
+    background-attachment: fixed;
+    /* تعیین اندازه تصویر برابر با اندازه صفحه */
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: blue;
+    background-attachment: fixed;
+    background-position: center;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -19,7 +32,7 @@ body {
     border-radius: 50%;
 }
 
-#iduser{
+#iduser {
     font-size: 20px;
     font-family: 'vazir';
     padding-top: 50px;
@@ -29,21 +42,23 @@ body {
     margin-top: 10px;
     text-align: center;
     border-radius: 10px;
-    background-color: white;
+    background-color: rgba(0, 0, 0, 0.37);
     padding: 60px;
     padding-left: 30px;
     padding-right: 30px;
     margin: 20px;
     box-shadow: 0 15px 25px rgb(0, 0, 0, .5);
 }
-footer{
+
+footer {
     margin-top: 60px;
     justify-content: center;
     align-items: center;
-    color: rgba(0, 0, 0, 0.65);
+    color: rgba(255, 255, 255, 0.65);
     font-size: 18px;
     font-family: 'vazir';
 }
+
 #text {
     padding-top: 20px;
     font-size: 20px;
@@ -56,19 +71,21 @@ footer{
     padding-bottom: 40px;
 
 }
-a{
+
+a {
     text-decoration: none;
-    color: rgba(0, 0, 0, 5);
+    color: rgba(255, 255, 255, 0.856);
     font-size: 18px;
     font-family: 'vazir';
 }
+
 #button {
     box-shadow: 0 15px 25px rgb(0, 0, 0, .1);
     border-radius: 10px;
     margin-top: 15px;
     border: none;
     padding: 15px 40px;
-    background: #57b846;
+    background: -webkit-linear-gradient(right, #9900ff65, rgba(211, 65, 247, 0.479));
     font-family: 'Vazir';
     font-size: 19px;
     color: #fff;
@@ -78,6 +95,26 @@ a{
 
 h3 {
     background-color: #57b846;
+}
+
+#message {
+    font-family: "Vazir";
+    list-style-type: none;
+    font-family: 7px;
+    padding: 15px;
+}
+
+#message>li {
+    font-family: "Vazir";
+    background: #ffffff;
+    padding-right: 15px;
+    width: 300px;
+    padding: 15px;
+    border-radius: 10px;
+    margin-left: auto;
+    margin-bottom: 10px;
+    word-wrap: break-word;
+    text-align: center;
 }
 
 #input {
@@ -90,7 +127,7 @@ h3 {
     border: none;
     display: block;
     width: 100%;
-    background: #e6e6e6;
+    background: #e6e6e6b6;
     font-family: 'Vazir';
     font-size: 19px;
     line-height: 1.5;
